--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <a class="active" href="">sem5</a>
 
-    <a href="page not linked">sem6</a>
+    <a href="https://labprograms.netlify.app">sem6</a>
 
     <a href="https://7thsemlab.netlify.app/">sem7</a>
 
