--- a/cn/cn.html
+++ b/cn/cn.html
@@ -30,7 +30,7 @@
 
     <a class="active" href="">sem5</a>
 
-    <a href="">sem6</a>
+    <a href="https://labprograms.netlify.app">sem6</a>
 
     <a href="https://7thsemlab.netlify.app/">sem7</a>
 
